<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="numberpicker_title">년도 선택</string>
    <string name="numberpicker_cancel">취소</string>
    <string name="numberpicker_selection">선택</string>

    <string name="january_month">1월</string>
    <string name="february_month">2월</string>
    <string name="march_month">3월</string>
    <string name="april_month">4월</string>
    <string name="may_month">5월</string>
    <string name="june_month">6월</string>
    <string name="july_month">7월</string>
    <string name="august_month">8월</string>
    <string name="september_month">9월</string>
    <string name="october_month">10월</string>
    <string name="november_month">11월</string>
    <string name="december_month">112월</string>


    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
</resources>