<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/gray_700" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/gray_700" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/gray_700" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/gray_700" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/gray_700" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/gray_700" />
    </LinearLayout>
</layout>