<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_year_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/numberpicker_title"
            android:gravity="center_horizontal"
            android:textAppearance="@style/Typography.Title2"
            android:textColor="@color/text_year_color"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/numberPicker_dialogYearPicker_year"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:switchTextAppearance="@style/Typography.SubTitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dialogYearPicker_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rect_white_r15"
                android:text="@string/numberpicker_cancel"
                android:textColor="@color/text_year_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberPicker_dialogYearPicker_year" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dialogYearPicker_confirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rect_blue600_r15"
                android:text="@string/numberpicker_selection"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPicker_dialogYearPicker_year" />
        </LinearLayout>
    </LinearLayout>
</layout>